--- a/about-pace.html
+++ b/about-pace.html
@@ -2,105 +2,100 @@
 <!--Last Space Sandwich Studio Website-->
 <!--Made by Pace Marier-->
 <!--Please do not copy-->
-<html>
+<html lang="en">
   <head>
-    <!--General Optimization-->
+    <!-- Optimization -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--Search Engine Optimization-->
-    <title>Last Space Sandwich - Pace</title>
-    <meta name="description" content="Learn about Pace Marier."/>
-    <!--Stylesheets-->
-    <link href="shift.css" rel="stylesheet">
+    <title>Last Space Sandwich - Home</title>
+    <meta name="description" content="The indie game development studio, Last Space Sandwich."/>
     <link href="bootstrap.css" rel="stylesheet">
+    <link href="shift.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
     <!--Menu Bar-->
     <div class="nav">
       <div class="container">
-        <ul class="pull-left">
-          <li><a href="index.html"><button type="button" class="btn btn-default btn-xs">Home</button></a></li>
-          <li><a href="games.html"><button type="button" class="btn btn-default btn-xs">Games</button></a></li>
+        <ul class="nav navbar-nav pull-left">
+          <li><img class="durr" src="img/logo.png"></li>
+          <li><h4 class="dilly">Last Space Sandwich Studio</h4></li>
+          <h5 class="dally">We Make Games Sometimes</h5>
         </ul>
-        <ul class="pull-right">
-          <li><a href="about-andrew.html"><button type="button" class="btn btn-default btn-xs">Andrew</button></a></li>
-          <li><a href="about-pace.html"><button type="button" class="btn btn-default btn-xs active">Pace</button></a></li>
-          <li><a href="contact.html"><button type="button" class="btn btn-default btn-xs">Contact</button></a></li>
+        <ul class="nav navbar-nav pull-right">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="games.html">Games</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Andrew <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="about-andrew.html">About</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pace <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="about-pace.html">About</a></li>
+                <li><a href="http://pace.spacesandwich.me">Blog</a></li>
+            </ul>
+          </li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
 
-    <!-- Main body -->
+    <!-- Sbout Me -->
     <div>
-      <div class="jumbotron">
-        <div class="icon-menu">
-        </div>
-
-      <script src="jquery.min.js"></script>
-      <script src="app.js"></script>
-
-      <!--Site Logo & Title-->
-        <div class="container">
-          <img src="img/logo.png"/>
-          <p style="font-size:24px"><b>Last Space Sandwich Studio</b></p>
-          <p>We make games sometimes.</p>
-        </div>
-      </div>
       <div class="angry-carrot">
-        <div class="container">
-          <!--About Me Text Frame-->
-          <h2>About Me!</h2>
-          <p>Hi! I'm Pace Marier! I'm a 15 year old writer, programmer, and artist</p>
-          <p>based in the Ottawa Valley! I enjoy running, martial arts, and playing video</p>
-          <p>games in my spare time. I've participated a total of four game jams in the</p>
-          <p>past. I am also one of the co-founders of Last Space Sandwich Studios.</p>
+        <div class="container" style="padding-top:10px">
           <div class="row">
-            <!--Center photo frame-->
-            <div class="col-md-4 col-md-offset-4">
-              <div class="thumbnail">
-                <img src="img/pace.bmp"/>
-              </div>
+            <div class="col-md-5 col-md-offset-1">
+              <h2 class="featurette-heading">About Me!</h2>
+              <p class="lead">Hi! I'm Pace Marier! I'm a 15 year old writer, programmer, and artist based in the Ottawa Valley! I enjoy running, martial arts, and playing video games in my spare time. I've participated a total of four game jams in the past. I am also one of the founding members of Last Space Sandwich Studios.</p>
             </div>
+            <div class="col-md-4 col-md-offset-1">
+              <img class="thumbnail" src="img/pace.bmp" alt="Generic placeholder image">
             </div>
           </div>
         </div>
-      </div>
+
       <!--Bottom Text Frames-->
       <div class="learn-more">
-	<div class="container">
-	  <div class="row">
-	    <div class="col-md-4">
+	      <div class="container">
+		      <div class="row">
+	          <div class="col-md-4">
               <div align="center">
-	        <h3>Contact Me!</h3>
-	        <p>Do you want to hire me to build you a website? Or maybe you want to discuss something interesting.</p>
-	        <p><a href="https://twitter.com/Zapboy30Pro"><button type="button" class="btn btn-info btn-xs">Twitter</button></a>
+			          <h3>Contact Me!</h3>
+			          <p>Do you want to hire me to build you a website? Or maybe you want to discuss something interesting.</p>
+			          <p><a href="https://twitter.com/Zapboy30Pro"><button type="button" class="btn btn-info btn-xs">Twitter</button></a>
                 <a href="https://www.youtube.com/user/Zapboy30"><button type="button" class="btn btn-danger btn-xs">Youtube</button></a></p>
-                <p><a href="mailto:pacemarier@spacesandwich.me"><button type="button" class="btn btn-success btn-xs">Email</button></a>
-                <a href="pdf/pace-resume.pdf"><button type="button" class="btn btn-warning btn-xs">My Resume</button></a></p>
+                <p><a href="mailto:pacemarier99@hotmail.com"><button type="button" class="btn btn-success btn-xs">Email</button></a>
+                <a href="pdf/pace-resume.pdf"><button type="button" class="btn btn-warning btn-xs">Resume</button></a></p>
               </div>
             </div>
-	    <div class="col-md-4">
-             <div align="center">
-	       <h3>Games I've Worked On</h3>
-               <p>All of the games I have made to this date are <b><i><u>prototypes</u></i></b> made in a small time frame.<p>
-	       <p><a href="http://fancywalrus.itch.io/snow"><button type="button" class="btn btn-info btn-xs">Snow</button></a>
-               <a href="http://www.ludumdare.com/compo/ludum-dare-30/?action=preview&uid=39779"><button type="button" class="btn btn-danger btn-xs">Elevatr</button></a></p>
-               <p><a href="http://www.epicgamejam.com/game/epic-dungeon-quest/"><button type="button" class="btn btn-success btn-xs">Epic Dungeon Run</button></a>
-               <a href="http://fancywalrus.itch.io/the-candy-king-saga--dungeon-of-the-crushed-scroll"><button type="button" class="btn btn-warning btn-xs">The Candy King Saga</button></a></p>
-              </div>
-            </div>
-	    <div class="col-md-4">
+		        <div class="col-md-4">
               <div align="center">
-	        <h3>Current Projects</h3>
-	        <p>Want to see the projects that im working on? Click the big red button to go to my blog!</p>
-	        <p><a href="http://blog.spacesandwich.me"><button type="button" class="btn btn-danger btn-xl">My Blog</button></a></p>
+			          <h3>Games I've Worked On</h3>
+                <p>All of the games I have made to this date are <b><i><u>prototypes</u></i></b> made in a small time frame.<p>
+			          <p><a href="http://fancywalrus.itch.io/snow"><button type="button" class="btn btn-info btn-xs">Snow</button></a>
+                <a href="http://www.ludumdare.com/compo/ludum-dare-30/?action=preview&uid=39779"><button type="button" class="btn btn-danger btn-xs">Elevatr</button></a></p>
+                <p><a href="http://www.epicgamejam.com/game/epic-dungeon-quest/"><button type="button" class="btn btn-success btn-xs">Epic Dungeon Run</button></a>
+                <a href="http://fancywalrus.itch.io/the-candy-king-saga--dungeon-of-the-crushed-scroll"><button type="button" class="btn btn-warning btn-xs">The Candy King Saga</button></a></p>
               </div>
+            </div>
+		        <div class="col-md-4">
+              <div align="center">
+			          <h3>Current Projects</h3>
+			          <p>Want to see the projects that im working on? Go to my blog!</p>
+			          <p><a href="http://pace.spacesandwich.me"><button type="button" class="btn btn-danger btn-xl">My Blog</button></a></p>
+              </div>
+		        </div>
+	        </div>
+	      </div>
 	    </div>
-	  </div>
-	</div>
-      </div>
     </div>
+  </div>
   </body>
+  <!-- Page Footer -->
   <footer>
     <div class="footer">
       <div class="container">
@@ -111,11 +106,15 @@
         <ul class="pull-right">
           <li>Website made by Pace D. Marier -</li>
           <li> Contact:</li>
-          <li><a href="mailto:pacemarier@spacesandwich.me">pacemarier@spacesandwich.me</a>.</li>
+          <li><a href="mailto:pacemarier99@hotmail.com">pacemarier@hotmail.com</a>.</li>
         </ul>
       </div>
     </div>
   </footer>
+  <!-- Javascript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="bootstrap.js"></script>
+  <script src="docs.min.js"></script>
 </html>
 <!--But seriously, don't copy my code.-->
 <!--Thats just uncool to the extreme-->
