--- a/contact.html
+++ b/contact.html
@@ -2,71 +2,77 @@
 <!--Last Space Sandwich Studio Website-->
 <!--Made by Pace Marier-->
 <!--Please do not copy-->
-<html>
+<html lang="en">
   <head>
-    <!--General Optimization-->
+    <!-- Optimization -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--Search Engine Optimization-->
-    <title>Last Space Sandwich - Contact</title>
-    <meta name="description" content="Contact the Last Space Sandwich."/>
-    <!--Stylesheets-->
-    <link href="shift.css" rel="stylesheet">
+    <title>Last Space Sandwich - Home</title>
+    <meta name="description" content="The indie game development studio, Last Space Sandwich."/>
     <link href="bootstrap.css" rel="stylesheet">
+    <link href="shift.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
     <!--Menu Bar-->
     <div class="nav">
       <div class="container">
-        <ul class="pull-left">
-          <li><a href="index.html"><button type="button" class="btn btn-default btn-xs">Home</button></a></li>
-          <li><a href="games.html"><button type="button" class="btn btn-default btn-xs">Games</button></a></li>
+        <ul class="nav navbar-nav pull-left">
+          <li><img class="durr" src="img/logo.png"></li>
+          <li><h4 class="dilly">Last Space Sandwich Studio</h4></li>
+          <h5 class="dally">We Make Games Sometimes</h5>
         </ul>
-        <ul class="pull-right">
-          <li><a href="about-andrew.html"><button type="button" class="btn btn-default btn-xs">Andrew</button></a></li>
-          <li><a href="about-pace.html"><button type="button" class="btn btn-default btn-xs">Pace</button></a></li>
-          <li><a href="contact.html"><button type="button" class="btn btn-default btn-xs active">Contact</button></a></li>
+        <ul class="nav navbar-nav pull-right">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="games.html">Games</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Andrew <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="about-andrew.html">About</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pace <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="about-pace.html">About</a></li>
+                <li><a href="http://pace.spacesandwich.me">Blog</a></li>
+            </ul>
+          </li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
-
-    <!-- Main body -->
+    <!-- Contact Us Frames -->
     <div>
-      <div class="jumbotron">
-        <div class="icon-menu">
+      <div class="angry-carrot">
+        <div class="container" style="padding-top:10px">
+          <div class="row">
+            <div class="col-md-5 col-md-offset-1">
+              <h2 class="featurette-heading-games">Contact Us</h2>
+              <p class="lead">Want to contact us? We can answer questions if you are experiencing any problems with our games and we're always open to hearing your opinion about our games!</p>
+              <p><a href="mailto:#"><button type="button" class="btn btn-success btn-xs">General Contact</button></a></p>
+            </div>
+            <div class="col-md-4 col-md-offset-1">
+              <img class="thumbnail" src="img/contact.bmp" alt="Generic placeholder image" style="width:250px">
+            </div>
+          </div>
+        <hr class="featurette-divider">
+          <div class="row">
+            <div class="col-md-4 col-md-offset-2">
+              <img class="thumbnail" src="img/social.bmp" alt="Generic placeholder image" style="width:250px">
+            </div>
+            <div class="col-md-5">
+              <h2 class="featurette-heading-games">We're Social</h2>
+              <p class="lead">You can easily contact us via our various social media pages!</p>
+              <p><a href="https://twitter.com/LastSSStudio"><button type="button" class="btn btn-info btn-xs">Twitter</button></a></p>
+              <p><a href="#"><button type="button" class="btn btn-primary btn-xs">Facebook</button></a>
+              <a href="#"><button type="button" class="btn btn-danger btn-xs">Youtube</button></a></p>
+            </div>
         </div>
-        <!--Site Logo & Title-->
-        <div class="container">
-          <img src="img/logo.png"/>
-          <p style="font-size:24px"><b>Last Space Sandwich Studio</b></p>
-          <p>We make games sometimes.</p>
-        </div>
-      </div>
-      <!--Contact info text frames-->
-      <div class="learn-more">
-	<div class="container">
-	  <div class="row">
-	    <div class="col-md-6">
-              <div align="center">
-	        <h3>Contact Us</h3>
-	        <p>Want to contact us? We can answer questions if you are experiencing any problems with our games and we're always open to hearing your opinion about our games!</p>
-	        <p><a href="mailto:support@spacesandwich.me"><button type="button" class="btn btn-success btn-xs">General Contact</button></a></p>
-              </div>
-	    </div>
-	    <div class="col-md-6">
-              <div align="center">
-	       <h3>We're Social</h3>
-	       <p>You can easily contact us via our various social media pages!</p>
-               <p><a href="https://twitter.com/LastSSStudio"><button type="button" class="btn btn-info btn-xs">Twitter</button></a></p>
-               <p><a href="https://www.facebook.com/LastSSStudios"><button type="button" class="btn btn-primary btn-xs">Facebook</button></a>
-               <a href="https://www.youtube.com/user/spacesandwichstudios"><button type="button" class="btn btn-danger btn-xs">Youtube</button></a></p>
-              </div>
-	    </div>
-	  </div>
-	</div>
       </div>
     </div>
   </body>
+  <!-- Page Footer -->
   <footer>
     <div class="footer">
       <div class="container">
@@ -77,11 +83,15 @@
         <ul class="pull-right">
           <li>Website made by Pace D. Marier -</li>
           <li> Contact:</li>
-          <li><a href="mailto:pacemarier@spacesandwich.me">pacemarier@spacesandwich.me</a>.</li>
+          <li><a href="mailto:pacemarier99@hotmail.com">pacemarier@hotmail.com</a>.</li>
         </ul>
       </div>
     </div>
   </footer>
+  <!-- javascript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="bootstrap.js"></script>
+  <script src="docs.min.js"></script>
 </html>
 <!--But seriously, don't copy my code.-->
 <!--Thats just uncool to the extreme-->
