--- a/games.html
+++ b/games.html
@@ -2,101 +2,93 @@
 <!--Last Space Sandwich Studio Website-->
 <!--Made by Pace Marier-->
 <!--Please do not copy-->
-<html>
+<html lang="en">
   <head>
-    <!--General Optimization-->
+    <!-- Optimization -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--Search Engine Optimization-->
-    <title>Last Space Sandwich - Games</title>
-    <meta name="description" content="Games by Last Space Sandwich Studios."/>
-    <!--Stylesheets-->
+    <title>Last Space Sandwich - Home</title>
+    <meta name="description" content="The indie game development studio, Last Space Sandwich."/>
+    <link href="bootstrap.css" rel="stylesheet">
     <link href="shift.css" rel="stylesheet">
-    <link href="bootstrap.css"rel="stylesheet">
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
     <!--Menu Bar-->
     <div class="nav">
       <div class="container">
-        <ul class="pull-left">
-          <li><a href="index.html"><button type="button" class="btn btn-default btn-xs">Home</button></a></li>
-          <li><a href="games.html"><button type="button" class="btn btn-default btn-xs active">Games</button></a></li>
+        <ul class="nav navbar-nav pull-left">
+          <li><img class="durr" src="img/logo.png"></li>
+          <li><h4 class="dilly">Last Space Sandwich Studio</h4></li>
+          <h5 class="dally">We Make Games Sometimes</h5>
         </ul>
-        <ul class="pull-right">
-          <li><a href="about-andrew.html"><button type="button" class="btn btn-default btn-xs">Andrew</button></a></li>
-          <li><a href="about-pace.html"><button type="button" class="btn btn-default btn-xs">Pace</button></a></li>
-          <li><a href="contact.html"><button type="button" class="btn btn-default btn-xs">Contact</button></a></li>
+        <ul class="nav navbar-nav pull-right">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="games.html">Games</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Andrew <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="about-andrew.html">About</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pace <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="about-pace.html">About</a></li>
+                <li><a href="http://pace.spacesandwich.me">Blog</a></li>
+            </ul>
+          </li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
-
-    <!-- Main body -->
     <div>
-      <div class="jumbotron">
-        <div class="icon-menu">
-        </div>
-      <!--Site Logo & Title-->
-      <div class="container">
-        <img src="img/logo.png"/>
-        <p style="font-size:24px"><b>Last Space Sandwich Studio</b></p>
-        <p>We make games sometimes.</p>
-      </div>
-      </div>
-      <!--Text and image frames-->
+      <!--Text and image frames for game-->
       <div class="angry-carrot">
-        <div class="container">
           <h2>Games</h2>
           <p>All of the current games made by us are Game Jam <b><u>prototypes</u></b>.</p>
           <p>We have yet to attempt a full fledged game.</p>
-          <div class="row">
-            <div class="col-md-4">
-              <div class="thumbnail">
-                <a href="http://www.epicgamejam.com/game/epic-dungeon-quest/"><img src="img/EDQ.bmp"/></a>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="thumbnail">
-                <a href="http://fancywalrus.itch.io/snow"><img src="img/SNO.bmp"/></a>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="thumbnail">
-                <a href="http://www.ludumdare.com/compo/ludum-dare-30/?action=preview&uid=39779"><img src="img/VTR.bmp"/></a>
-              </div>
-            </div>
+      <div class="learn-more">
+	      <div class="container" style="padding-top:10px">
+		      <div class="row">
+          <div class="col-md-5 col-md-offset-1">
+            <h2 class="featurette-heading-games">Epic Dungeon Quest</h2>
+            <p class="lead">Epic Dungeon Quest is our studios first game as a team in the same room. It took a little under 45 hours to make for the <a href="http://www.epicgamejam.com">Epic Game Jam</a>. Its a platformer about getting to the end of each level without dying.</p>
+            <p><a href="http://www.epicgamejam.com/game/epic-dungeon-quest/"><button type="button" class="btn btn-default btn-xs">Download It Here</button></a></p>
+          </div>
+          <div class="col-md-4 col-md-offset-1">
+            <img class="thumbnail" src="img/EDQ.bmp" alt="Generic placeholder image" style="width:250px">
           </div>
         </div>
-      </div>
-      <!--Bottom Text Frames-->
-      <div class="learn-more">
-	<div class="container">
-	  <div class="row">
-	    <div class="col-md-4">
-              <div align="center">
-	        <h3>Epic Dungeon Quest</h3>
-	        <p>Epic Dungeon Quest is our studios first game as a team in the same room. It took a little under 45 hours to make for the <a href="http://www.epicgamejam.com">Epic Game Jam</a>. Its a platformer about getting to the end of each level without dying.</p>
-	        <p><a href="http://www.epicgamejam.com/game/epic-dungeon-quest/"><button type="button" class="btn btn-default btn-xs">Download It Here</button></a></p>
-              </div>
-	    </div>
-	    <div class="col-md-4">
-              <div align="center">
-	        <h3>Snow</h3>
-	        <p>Snow is a visual novel made for the <a href="http://itch.io/jam/the-public-domain-jam">Public Domain Jam</a> solo by Pace Marier. The game was made from scratch in 4 days and is CC0. Its based off of the Brothers Grimm fairytale Snow-white with a couple of twists.</p>
-	        <p><a href="http://fancywalrus.itch.io/snow"><button type="button" class="btn btn-default btn-xs">Download It Here</button></a></p>
-	      </div>
-            </div>
-	    <div class="col-md-4">
-              <div align="center">
-	        <h3>Elevatr</h3>
-	        <p>Are you ready for the craziest elevator ride of your life? Elevatr is a game made for the <a href="http://www.ludumdare.com/">Ludum Dare 30 Jam</a> by Andrew Schwan and Pace Marier. The game took a little under 70 hours to make.</p>
-	        <p><a href="http://www.ludumdare.com/compo/ludum-dare-30/?action=preview&uid=39779"><button type="button" class="btn btn-default btn-xs">Download It Here</button></a></p>
-	      </div>
-            </div>
-	   </div>
-	</div>
-      </div>
+      <hr class="featurette-divider">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-2">
+            <img class="thumbnail" src="img/SNO.bmp" alt="Generic placeholder image" style="width:250px">
+          </div>
+          <div class="col-md-5 ">
+            <h2 class="featurette-heading-games">Snow</h2>
+            <p class="lead">Snow is a visual novel made for the <a href="http://itch.io/jam/the-public-domain-jam">Public Domain Jam</a> solo by Pace Marier. The game was made from scratch in 4 days and is CC0. Its based off of the Brothers Grimm fairytale Snow-white with a couple of twists.</p>
+            <p><a href="http://fancywalrus.itch.io/snow"><button type="button" class="btn btn-default btn-xs">Download It Here</button></a></p>
+          </div>
+        </div>
+      <hr class="featurette-divider">
+        <div class="row">
+          <div class="col-md-5 col-md-offset-1">
+            <h2 class="featurette-heading-games">Elevatr</h2>
+            <p class="lead">Are you ready for the craziest elevator ride of your life? Elevatr is a game made for the <a href="http://www.ludumdare.com/">Ludum Dare 30 Jam</a> by Andrew Schwan and Pace Marier. The game took a little under 70 hours to make.</p>
+            <p><a href="http://www.ludumdare.com/compo/ludum-dare-30/?action=preview&uid=39779"><button type="button" class="btn btn-default btn-xs">Download It Here</button></a></p>
+          </div>
+          <div class="col-md-4 col-md-offset-1">
+            <img class="thumbnail" src="img/VTR.bmp" alt="Generic placeholder image" style="width:250px">
+          </div>
+        </div>
+       </div>
+	     </div>
+
     </div>
+  </div>
   </body>
+  <!-- Page Footer -->
   <footer>
     <div class="footer">
       <div class="container">
@@ -107,11 +99,15 @@
         <ul class="pull-right">
           <li>Website made by Pace D. Marier -</li>
           <li> Contact:</li>
-          <li><a href="mailto:pacemarier@spacesandwich.me">pacemarier@spacesandwich.me</a>.</li>
+          <li><a href="mailto:pacemarier99@hotmail.com">pacemarier@hotmail.com</a>.</li>
         </ul>
       </div>
     </div>
   </footer>
+  <!-- Javascript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="bootstrap.js"></script>
+  <script src="docs.min.js"></script>
 </html>
 <!--But seriously, don't copy my code.-->
 <!--Thats just uncool to the extreme-->
